--- a/src/component/ChangePassword/changePass.css
+++ b/src/component/ChangePassword/changePass.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* min-width: 100vw;
-    min-height: 100vh; */
+    min-width: 100vw;
+    min-height: 100vh;
     background-color: #F2F4F8;
 
 }
