--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,15 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  outline: none;
+  box-sizing: border-box;
+
+}
+body {
+  width: 100vw;
+  overflow-x: hidden;
+}
